# bag-of-words

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: pages.yml
assets/: asimov.tsv  fiction-xlsx.tsv  wikipedia.tsv
docs/plans/: 2026-07-17-wasm-word-deck.md
scripts/: build_wikipedia_corpus.py
src/: lib.rs
tests/: api.rs  rendering.rs  sampling.rs
web/: app.js  artifact.js  artifact.test.mjs  build.test.mjs  font-picker.js  fonts.css  fonts.js  index.html  interface.test.mjs  pdf.js  pdf.test.mjs  request.js  request.test.mjs  style.css  typst-loader.js  typst-loader.test.mjs
