[package]
name = "word-deck"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Deterministic, browser-ready printable word-deck generator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.9"
rand_chacha = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-stemmers = "1.2"
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# rand's entropy backend needs the browser Web Crypto implementation on wasm.
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"
